--- a/custom_components/divoom_pixoo/manifest.json
+++ b/custom_components/divoom_pixoo/manifest.json
@@ -6,6 +6,7 @@
   "documentation": "https://github.com/gickowtf/pixoo-homeassistant/blob/main/README.md",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/gickowtf/pixoo-homeassistant/issues",
+  "platforms": ["light", "sensor"],
   "requirements": [],
-  "version": "1.1.0"
+  "version": "1.2.0"
 }
