--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,14 +22,14 @@ jobs:
         - name: "Run hassfest validation"
           uses: "home-assistant/actions/hassfest@master"
 
-  #hacs: # https://github.com/hacs/action
-    #name: "HACS Validation"
-    #runs-on: "ubuntu-latest"
-    #steps:
-        #- name: "Checkout the repository"
-          #uses: "actions/checkout@v4"
+  hacs: # https://github.com/hacs/action
+    name: "HACS Validation"
+    runs-on: "ubuntu-latest"
+    steps:
+        - name: "Checkout the repository"
+          uses: "actions/checkout@v4"
 
-        #- name: "Run HACS validation"
-          #uses: "hacs/action@main"
-          #with:
-            #category: "integration"
+        - name: "Run HACS validation"
+          uses: "hacs/action@main"
+          with:
+            category: "integration"
